# jupyverse

./: .gitignore  .gitlab-ci.yml  Dockerfile
.devcontainer/: devcontainer.json  requirements.txt
apergy/: 00-startup.py  pyproject.toml
plugins/apergy/: README.md  pyproject.toml  setup.cfg
plugins/apergy/fps_apergy/: models.py  routes.py
plugins/auth/fps_auth/: backends.py
plugins/lab/fps_lab/: routes.py
tests/: test_execute.http
