[tool.poetry]
name = "jupyter"
version = "0.1.0"
description = ""
authors = ["chwzr <felix.koppe@cavorit.de>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^3.4.4"
jedi = "^0.18.1"
matplotlib = "^3.5.2"
psycopg2-binary = "^2.9.3"
wheel = "^0.37.1"
apergy-metacat-client = {version = "^0.2.4", source="opal"}
apergy = {version = "^0.1.30", source="opal"}
pgcontents = {version = "^0.7", source="opal"}
graphmodel = {version = "^0.2.5", source = "opal"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "opal"
url = "https://opal.cavorit.de/api/v4/projects/73/packages/pypi/simple"
secondary = true
