[tool.poetry]
name = "jupyverse"
version = "0.1.0"
description = ""
authors = ["chwzr <felix.koppe@cavorit.de>"]

[tool.poetry.dependencies]
matplotlib = "^3.5.2"
apergy-metacat-client = {version = "^0.2.4", source="opal"}
apergy = {version = "^0.1.30", source="opal"}
pgcontents = {version = "^0.7", source="opal"}
graphmodel = {version = "^0.2.5", source = "opal"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "opal"
url = "https://opal.cavorit.de/api/v4/projects/73/packages/pypi/simple"
secondary = true
