[metadata]
name = fps_apergy
version = attr: fps_apergy.__version__
description = An FPS plugin for the apergy API
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
author = Felix Koppe
author_email = felix.koppe@cavorit.de
url = https://cavorit.de
platforms = Windows, Linux, Mac OS X
keywords = jupyter, server, fastapi, pluggy, plugins, apergy

[bdist_wheel]
universal = 1

[options]
include_package_data = True
packages = find:
python_requires = >=3.7

install_requires =
  fps >=0.0.8
  fps-auth
  fps-lab
  fps-yjs
  fps-kernels
  pyzmq
  websockets
  python-dateutil

[options.entry_points]
fps_router =
    fps-apergy = fps_apergy.routes
